ec2/Internet-Gateway.tf
# Creating Internet Gateway
resource "aws_internet_gateway" "Terraform-IG" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.project_name}-IG"
  }
}
